--- a/sht/index.html
+++ b/sht/index.html
@@ -267,10 +267,10 @@
 						<thead>
 							<tr>
 								<th>
-									<div class="checkbox">
+									<span class="icheckbox">
 									    <input type="checkbox">
 									    <label></label>
-									</div>
+									</span>
 								</th>
 								<th>序号</th>
 								<th>工厂名称</th>
@@ -286,10 +286,10 @@
 						<tbody>
 							<tr>
 								<td>
-									<div class="checkbox">
+									<span class="icheckbox">
 									    <input type="checkbox">
 									    <label></label>
-									</div>
+									</span>
 								</td>
 								<td>1</td>
 								<td>donggongzhongchang</td>
@@ -303,10 +303,10 @@
 							</tr>
 							<tr>
 								<td>
-									<div class="checkbox">
+									<span class="icheckbox">
 									    <input type="checkbox">
 									    <label></label>
-									</div>
+									</span>
 								</td>
 								<td>1</td>
 								<td>donggongzhongchang</td>
@@ -320,10 +320,10 @@
 							</tr>
 							<tr>
 								<td>
-									<div class="checkbox">
+									<span class="icheckbox">
 									    <input type="checkbox">
 									    <label></label>
-									</div>
+									</span>
 								</td>
 								<td>1</td>
 								<td>donggongzhongchang</td>
@@ -384,7 +384,7 @@
 </div><!-- /.main -->
 
 <script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
+<!-- <script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 <script src="https://cdn.bootcss.com/bootstrap-submenu/1.2.7/js/bootstrap-submenu.min.js"></script>
 <script src="assets/js/jquery.bootstrap-dropdown-hover.js"></script>
 <script src="assets/js/common.js"></script>
