--- a/sht/login.html
+++ b/sht/login.html
@@ -38,10 +38,10 @@
 				  </div>
 				   <div class="clearfix form-group form-inline">
 					   	<div class="pull-right"><a href="#">忘记密码？</a></div>
-					  	<div class="icheckbox">
-					    	<input type="checkbox"> 记住密码
-							<label></label>
-					  	</div> 
+					  	<span class="icheckbox">
+					  		<input type="checkbox">
+					  		<label class="text">记住密码</label>
+					  	</span>
 				  </div>
 				  <button type="submit" class="btn btn-primary btn-lg btn-block">登 录</button>
 				</form>
