--- a/sht/table-side.html
+++ b/sht/table-side.html
@@ -203,73 +203,73 @@
 								<thead>
 									<tr>
 										<th>
-											<div class="checkbox">
+											<span class="icheckbox">
 											    <input type="checkbox">
 											    <label></label>
-											</div>
+											</span>
 										</th>
 										<th>序号</th>
-										<th>工厂名称</th>
-										<th>排放口编号</th>
-										<th>时间</th>
-										<th>颗粒物</th>
-										<th>二氧化硫</th>
-										<th>氮氧化物</th>
-										<th>氨氮</th>
-										<th>COD</th>
+										<th>二级工厂名称</th>
+										<th>所属目录</th>
+										<th>文件名</th>
+										<th>上传时间</th>
+										<th>操作</th>
 									</tr>
 								</thead>
 								<tbody>
 									<tr>
 										<td>
-											<div class="checkbox">
+											<span class="icheckbox">
 											    <input type="checkbox">
 											    <label></label>
-											</div>
+											</span>
 										</td>
 										<td>1</td>
 										<td>donggongzhongchang</td>
-										<td>DA001</td>
-										<td>2019-02-28 23:00:00</td>
-										<td class="text-red">11.2 (0↑)</td>
-										<td class="text-red">36.59 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
+										<td>排污许可证信息</td>
+										<td>排污许可证副本-固阳矿山公司.pdf</td>
+										<td>2019-03-22 11:12:22</td>
+										<td>
+											<button type="button"><i class="icon icon-download icon-blue"></i></button>
+											<button type="button"><i class="icon icon-del icon-red"></i></button>
+											<button type="button"><i class="icon icon-preview icon-green"></i></button>
+										</td>
 									</tr>
 									<tr>
 										<td>
-											<div class="checkbox">
+											<span class="icheckbox">
 											    <input type="checkbox">
 											    <label></label>
-											</div>
+											</span>
 										</td>
 										<td>1</td>
 										<td>donggongzhongchang</td>
-										<td>DA001</td>
-										<td>2019-02-28 23:00:00</td>
-										<td class="text-red">11.2 (0↑)</td>
-										<td class="text-red">36.59 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
+										<td>排污许可证信息</td>
+										<td>排污许可证副本-固阳矿山公司.pdf</td>
+										<td>2019-03-22 11:12:22</td>
+										<td>
+											<button type="button"><i class="icon icon-download icon-blue"></i></button>
+											<button type="button"><i class="icon icon-del icon-red"></i></button>
+											<button type="button"><i class="icon icon-preview icon-green"></i></button>
+										</td>
 									</tr>
 									<tr>
 										<td>
-											<div class="checkbox">
+											<span class="icheckbox">
 											    <input type="checkbox">
 											    <label></label>
-											</div>
+											</span>
 										</td>
 										<td>1</td>
 										<td>donggongzhongchang</td>
-										<td>DA001</td>
-										<td>2019-02-28 23:00:00</td>
-										<td class="text-red">11.2 (0↑)</td>
-										<td class="text-red">36.59 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
-										<td class="text-red">98.03 (0↑)</td>
+										<td>排污许可证信息</td>
+										<td>排污许可证副本-固阳矿山公司.pdf</td>
+										<td>2019-03-22 11:12:22</td>
+										<td>
+											<button type="button"><i class="icon icon-download icon-blue"></i></button>
+											<button type="button"><i class="icon icon-del icon-red"></i></button>
+											<button type="button"><i class="icon icon-preview icon-green"></i></button>
+										</td>
 									</tr>
 								</tbody>
 							</table>
