--- a/sht/contact.html
+++ b/sht/contact.html
@@ -89,7 +89,7 @@
 					<li class="sub-nav-item dropdown-submenu">
 						<a href="#" class="sub-nav-item-title" data-toggle="dropdown">设备设施管理</a>
 						<ul class="sub-nav dropdown-menu">
-							<li class="sub-nav-item"><a href="#">排污口管理</a></li>
+							<li class="sub-nav-item"><a href="table-form.html">排污口管理</a></li>
 							<li class="sub-nav-item"><a href="#">生产设备管理</a></li>
 							<li class="sub-nav-item"><a href="#">治污设备管理</a></li>
 						</ul>
