--- a/sht/table-form.html
+++ b/sht/table-form.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
-	<title>首页-数汇通-企业排污许可管理平台</title>
+	<title>排污口管理-设备设施管理-台账记录-数汇通-企业排污许可管理平台</title>
 
 	<link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdn.bootcss.com/bootstrap-submenu/1.2.7/css/bootstrap-submenu.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
 			<li class="nav-item dropdown">
 				<a href="#" class="btn-menu"><i class="icon icon-menu"></i></a>
 			</li>
-			<li class="nav-item dropdown active">
+			<li class="nav-item dropdown">
 				<a href="javascript:void(0)" class="nav-item-title dropdown-toggle" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false"><i class="icon icon-docs"></i><span class="text">文件管理</span></i></a>
 				<ul class="sub-nav dropdown-menu">
 					<li class="sub-nav-item"><a href="table-side.html">一企一档</a></li>
@@ -52,7 +52,7 @@
 					<li class="sub-nav-item"><a href="#">地方性法规</a></li>
 				</ul>
 			</li>
-			<li class="nav-item dropdown">
+			<li class="nav-item dropdown active">
 				<a href="javascript:void(0)" class="nav-item-title dropdown-toggle" data-toggle="dropdown"  aria-haspopup="true" aria-expanded="false"><i class="icon icon-bill"></i><span class="text">台账记录</span></a>
 				<ul class="sub-nav dropdown-menu">
 					<li class="sub-nav-item dropdown-submenu">
@@ -146,9 +146,9 @@
 	<div class="content">
 		<ul class="nav nav-tabs" role="tablist">
 		    <li role="presentation" class="first"><a href="#home" class="tab tab-home" aria-controls="home" role="tab" data-toggle="tab"><i class="icon icon-home"></i></a></li>
-		    <li role="presentation" class="active"><a href="#yqyd" class="tab" aria-controls="contact" role="tab" data-toggle="tab">一企一档</a><button type="button" class="btn btn-link btn-close"><i class="icon icon-close"></i></button></li>
+		    <li role="presentation"><a href="#yqyd" class="tab" aria-controls="contact" role="tab" data-toggle="tab">一企一档</a><button type="button" class="btn btn-link btn-close"><i class="icon icon-close"></i></button></li>
 		    <li role="presentation"><a href="#gjxfg" class="tab" aria-controls="contact" role="tab" data-toggle="tab">国家法律法规</a><button type="button" class="btn btn-link btn-close"><i class="icon icon-close"></i></button></li>
-		    <li role="presentation"><a href="#dfxfg" class="tab" aria-controls="contact" role="tab" data-toggle="tab">地方性法规</a><button type="button" class="btn btn-link btn-close"><i class="icon icon-close"></i></button></li>
+		    <li role="presentation" class="active"><a href="#pwkgl" class="tab" aria-controls="contact" role="tab" data-toggle="tab">排污口管理</a><button type="button" class="btn btn-link btn-close"><i class="icon icon-close"></i></button></li>
 		    <li role="presentation"><a href="#contact" class="tab" aria-controls="contact" role="tab" data-toggle="tab">联系我们</a><button type="button" class="btn btn-link btn-close"><i class="icon icon-close"></i></button></li>
 		    <li class="navbar-right last dropdown">
 		    	<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="icon icon-tab"></i></a>
@@ -163,13 +163,42 @@
 		<div class="tab-content">
 			<div class="panel first">
 				<form class="form-inline">
-					<button type="submit" class="btn btn-green pull-right"><i class="icon icon-export"></i>上传新文件</button>
-					<button type="submit" class="btn btn-red pull-right"><i class="icon icon-del"></i>删除</button>
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="请输入">
-	  				</div>
+					<button type="submit" class="btn btn-green pull-right"><i class="icon icon-export"></i>导出</button>
+					<button type="submit" class="btn btn-blue pull-right"><i class="icon icon-add"></i>添加</button>
+					<div class="form-group dropdown drop-select justified">
+						<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						    所有工厂
+						    <span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu1">
+						  	<li><a href="javascript:void(0)">donggongzhongchang</a></li>
+						  	<li><a href="javascript:void(0)">jiaohuachang</a></li>
+						  	<li><a href="javascript:void(0)">liantiechang</a></li>
+						  	<li><a href="javascript:void(0)">liangangchang</a></li>
+						</ul>
+		  			</div>
+		  			<div class="form-group dropdown drop-select justified wider">
+						<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						    排放口许可编号-排放口企业编号
+						    <span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
+						  	<li class="with-input"><input type="text" class="form-control" placeholder="查找"></li>
+						  	<li><a href="javascript:void(0)">DA017-FQ-BBCDLB03</a></li>
+						</ul>
+		  			</div>
+		  			<div class="form-group dropdown drop-select justified wider">
+						<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+						    生产设施编号-生产设施名称
+						    <span class="caret"></span>
+						</button>
+						<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu3">
+						  	<li class="with-input"><input type="text" class="form-control" placeholder="查找"></li>
+						  	<li><a href="javascript:void(0)">MF0662-连铸机</a></li>
+						</ul>
+		  			</div>
 	  				<button type="submit" class="btn btn-blue">查询</button>
-	  				
+	  				<button type="submit" class="btn btn-link">清除</button>
 		  		</form>
 	  				
 	
@@ -177,29 +206,7 @@
 	
 			<div class="panel">
 				<div class="panel-body">
-					<div class="row">
-						<div class="col-lg-3">
-							<ul class="list-group list-file">
-								<li class="list-group-item">
-							    	<button type="button" class="btn btn-green btn-sm pull-right"><i class="icon icon-add"></i>新建目录</button>
-									<div class="list-title"><i class="icon icon-folder icon-sm"></i>所有文件</div>
-								</li>
-								<li class="list-group-item">
-							    	<button type="button" class="pull-right"><i class="icon icon-del icon-sm"></i></button>
-									<div class="list-title"><i class="icon icon-folder icon-sm"></i>行业可行技术指南</div>
-								</li>
-								<li class="list-group-item">
-							    	<button type="button" class="pull-right"><i class="icon icon-del icon-sm"></i></button>
-									<div class="list-title"><i class="icon icon-folder icon-sm"></i>自行监测指南</div>
-								</li>
-								<li class="list-group-item">
-							    	<button type="button" class="pull-right"><i class="icon icon-del icon-sm"></i></button>
-									<div class="list-title"><i class="icon icon-folder icon-sm"></i>许可证技术规范及管理办法许可证技术规范及管理办法</div>
-								</li>
-							</ul>
-						</div>
-						<div class="col-lg-9">
-							<table class="table table-striped table-hover">
+					<table class="table table-striped table-hover">
 								<thead>
 									<tr>
 										<th>
@@ -273,7 +280,7 @@
 									</tr>
 								</tbody>
 							</table>
-							<div class="pages-bar">
+					<div class="pages-bar">
 								<ul class="pull-right pagination">
 								    <li>
 								      <a href="#" aria-label="First">
@@ -304,9 +311,7 @@
 								<div class="page-stats">
 									显示第<em>1</em>到第<em>10</em>条记录，总共<em>24</em>条记录，每页显示<span class="btn-group"><button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="page-size">10</span> <span class="caret"></span></button><ul class="dropdown-menu" role="menu"><li class="active"><a href="javascript:void(0)">10</a></li><li><a href="javascript:void(0)">25</a></li></ul></span>条记录
 								</div>											
-							</div>
-						</div>
-					</div><!-- /.row -->				
+							</div>				
 				</div><!-- /.panel-body -->
 			</div><!-- /.panel -->
 		</div><!-- /.tab-content -->
