--- a/sht/index.html
+++ b/sht/index.html
@@ -263,7 +263,8 @@
 			<div class="panel">
 				<h2 class="panel-title">超标排口汇总</h2>
 				<div class="panel-body">
-					<table class="table table-striped table-hover">
+					<div class="table-responsive">
+						<table class="table table-striped table-hover">
 						<thead>
 							<tr>
 								<th>
@@ -337,6 +338,7 @@
 							</tr>
 						</tbody>
 					</table>
+					</div><!-- /.table-responsive -->
 					<div class="pages-bar">
 						<ul class="pull-right pagination">
 						    <li>
@@ -368,7 +370,7 @@
 						<div class="page-stats">
 							显示第<em>1</em>到第<em>10</em>条记录，总共<em>24</em>条记录，每页显示<span class="btn-group"><button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="page-size">10</span> <span class="caret"></span></button><ul class="dropdown-menu" role="menu"><li class="active"><a href="javascript:void(0)">10</a></li><li><a href="javascript:void(0)">25</a></li></ul></span>条记录
 						</div>
-					</div>
+					</div><!-- /.pages-bar -->
 				</div><!-- /.panel-body -->
 			</div><!-- /.panel -->
 			<div class="panel">
