--- a/sht/table-form.html
+++ b/sht/table-form.html
@@ -206,8 +206,9 @@
 	
 			<div class="panel">
 				<div class="panel-body">
-					<table class="table table-striped table-hover">
-								<thead>
+					<div class="table-responsive">
+						<table class="table table-striped table-hover table-condensed">
+							<thead>
 									<tr>
 										<th>
 											<span class="icheckbox">
@@ -217,13 +218,18 @@
 										</th>
 										<th>序号</th>
 										<th>二级工厂名称</th>
-										<th>所属目录</th>
-										<th>文件名</th>
-										<th>上传时间</th>
-										<th>操作</th>
+										<th>排放口名称</th>
+										<th>排放口编号</th>
+										<th>排放口企业编号</th>
+										<th>排放形式</th>
+										<th>排污类型</th>
+										<th>排放口类型</th>
+										<th>生产单元</th>
+										<th>编辑</th>
+										<th>浓度限值</th>
 									</tr>
 								</thead>
-								<tbody>
+							<tbody>
 									<tr>
 										<td>
 											<span class="icheckbox">
@@ -233,53 +239,24 @@
 										</td>
 										<td>1</td>
 										<td>donggongzhongchang</td>
-										<td>排污许可证信息</td>
-										<td>排污许可证副本-固阳矿山公司.pdf</td>
-										<td>2019-03-22 11:12:22</td>
+										<td>3号排口</td>
+										<td>DA003</td>
+										<td>3号炉排口</td>
+										<td>有组织</td>
+										<td>废气</td>
+										<td>主要排放口</td>
+										<td>热力作业部1号、2号CCPP发电机组、热力作业部3号</td>
 										<td>
-											<button type="button"><i class="icon icon-download icon-blue"></i></button>
-											<button type="button"><i class="icon icon-del icon-red"></i></button>
-											<button type="button"><i class="icon icon-preview icon-green"></i></button>
-										</td>
-									</tr>
-									<tr>
+											<button type="button" data-toggle="modal" data-target="#myModal1"><i class="icon icon-edit icon-blue"></i></button>
+											<button type="button" data-toggle="modal" data-target=".modal-info"><i class="icon icon-del icon-red"></i></button></td>		
 										<td>
-											<span class="icheckbox">
-											    <input type="checkbox">
-											    <label></label>
-											</span>
-										</td>
-										<td>1</td>
-										<td>donggongzhongchang</td>
-										<td>排污许可证信息</td>
-										<td>排污许可证副本-固阳矿山公司.pdf</td>
-										<td>2019-03-22 11:12:22</td>
-										<td>
-											<button type="button"><i class="icon icon-download icon-blue"></i></button>
-											<button type="button"><i class="icon icon-del icon-red"></i></button>
-											<button type="button"><i class="icon icon-preview icon-green"></i></button>
-										</td>
-									</tr>
-									<tr>
-										<td>
-											<span class="icheckbox">
-											    <input type="checkbox">
-											    <label></label>
-											</span>
-										</td>
-										<td>1</td>
-										<td>donggongzhongchang</td>
-										<td>排污许可证信息</td>
-										<td>排污许可证副本-固阳矿山公司.pdf</td>
-										<td>2019-03-22 11:12:22</td>
-										<td>
-											<button type="button"><i class="icon icon-download icon-blue"></i></button>
-											<button type="button"><i class="icon icon-del icon-red"></i></button>
-											<button type="button"><i class="icon icon-preview icon-green"></i></button>
+											
+											<button type="button" data-toggle="modal" data-target="#myModal"><i class="icon icon-adjust icon-purple"></i></button>
 										</td>
 									</tr>
 								</tbody>
-							</table>
+						</table>
+					</div><!-- /.table-responsive -->
 					<div class="pages-bar">
 								<ul class="pull-right pagination">
 								    <li>
@@ -311,10 +288,219 @@
 								<div class="page-stats">
 									显示第<em>1</em>到第<em>10</em>条记录，总共<em>24</em>条记录，每页显示<span class="btn-group"><button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="page-size">10</span> <span class="caret"></span></button><ul class="dropdown-menu" role="menu"><li class="active"><a href="javascript:void(0)">10</a></li><li><a href="javascript:void(0)">25</a></li></ul></span>条记录
 								</div>											
-							</div>				
+							</div><!-- /.pages-bar -->			
 				</div><!-- /.panel-body -->
 			</div><!-- /.panel -->
 		</div><!-- /.tab-content -->
+		
+		<!-- 编辑 -->
+		<div class="modal fade" id="myModal1" tabindex="-1" role="dialog">
+			<div class="modal-dialog modal-lg" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="shut pull-right" data-dismiss="modal"><i class="icon icon-shut"></i></button>
+						<button type="button" class="max pull-right"><i class="icon icon-max"></i></button>
+						<button type="button" class="zoom pull-right"><i class="icon icon-minus"></i></button>	
+						<h4 class="modal-title">编辑</h4>
+					</div>
+					<div class="modal-body">
+						<form class="form-horizontal">
+							<div class="form-group">
+								<label class="col-sm-3 control-label">二级厂名称</label>
+								<div class="col-sm-9">
+									<div class="form-group dropdown drop-select justified wider">
+										<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+										    donggongzhongchang
+										    <span class="caret"></span>
+										</button>
+										<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+										  	<li><a href="javascript:void(0)">donggongzhongchang</a></li>
+										</ul>
+								  	</div>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">排放口名称</label>
+								<div class="col-sm-9">
+									<input type="email" class="form-control" value="3号排口">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">排放口许可编号</label>
+								<div class="col-sm-9">
+									<input type="email" class="form-control" value="DA003">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">排污口企业编号</label>
+								<div class="col-sm-9">
+									<input type="email" class="form-control" value="3号炉排口">
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">排污类型</label>
+								<div class="col-sm-9">
+									<span class="iradio">
+										<input type="radio" name="optionsRadios">
+										<label class="text">废气</label>
+									</span>
+									<span class="iradio">
+										<input type="radio" name="optionsRadios">
+										<label class="text">废水</label>
+									</span>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">排放组织方式</label>
+								<div class="col-sm-9">
+									<div class="form-group dropdown drop-select justified wider">
+										<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+										    有组织
+										    <span class="caret"></span>
+										</button>
+										<ul class="dropdown-menu" aria-labelledby="dropdownMenu2">
+										  	<li><a href="javascript:void(0)">有组织</a></li>
+										</ul>
+								  	</div>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">排放口类型</label>
+								<div class="col-sm-9">
+									<span class="iradio">
+										<input type="radio" name="optionsRadios1">
+										<label class="text">一般排放口</label>
+									</span>
+									<span class="iradio">
+										<input type="radio" name="optionsRadios1">
+										<label class="text">主要排放口</label>
+									</span>
+								</div>
+							</div>
+							<div class="form-group">
+								<label class="col-sm-3 control-label">生产单元</label>
+								<div class="col-sm-9">
+									<input type="email" class="form-control" value="1-5号机组">
+								</div>
+							</div>
+						</form>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+						<button type="button" class="btn btn-primary">提交</button>
+					</div>
+				</div><!-- /.modal-content -->
+			</div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
+		
+		<!-- 确认信息 -->
+		<div class="modal fade modal-info" tabindex="-1" role="dialog">
+			<div class="modal-dialog modal-sm" role="document">
+		    	<div class="modal-content">
+			    	<div class="modal-header">
+						<button type="button" class="shut pull-right" data-dismiss="modal"><i class="icon icon-shut"></i></button>
+						<h4 class="modal-title">确认信息</h4>
+					</div>
+					<div class="modal-body">
+						<p>确定要删除选中的记录？</p>
+					</div>
+					<div class="modal-footer">
+			        	<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+			        	<button type="button" class="btn btn-primary">确认</button>
+					</div>
+		    	</div>
+			</div>
+		</div>
+		
+		<!-- 配置限值 -->
+		<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
+		  	<div class="modal-dialog modal-lg">
+		   		<div class="modal-content">
+		     		<div class="modal-header">
+			 			<button type="button" class="shut pull-right" data-dismiss="modal"><i class="icon icon-shut"></i></button>
+		        		<button type="button" class="max pull-right"><i class="icon icon-max"></i></button>
+						<button type="button" class="zoom pull-right"><i class="icon icon-minus"></i></button>		        		
+						<h4 class="modal-title" id="myModalLabel">配置限值</h4>
+					</div>
+				    <div class="modal-body">
+					    <ul class="list list-row-2">
+					        <li>
+					        	<label>二级厂名称</label>donggongzhongchang
+					        </li>
+					        <li>
+					        	<label>排放口名称</label>3号排口
+					        </li>
+					        <li>
+					        	<label>排放口许可编号</label>DA003
+					        </li>
+					        <li>
+					        	<label>排污类型</label>废气
+					        </li>
+					        <li>
+					        	<label>排放组织方式</label>有组织
+					        </li>	      
+					        <li>
+					        	<label>排放口类型</label>主要排放口
+					        </li>
+					    </ul>
+					    <div class="btn-group">
+								<button type="button" class="btn btn-green"><i class="icon icon-add"></i>添加</button>
+							</div>
+						<div class="table-responsive">
+							<table class="table table-striped table-hover table-condensed table-border-top">
+								<thead>
+									<tr>
+										<th>污染物名称</th>
+										<th>限值</th>
+										<th>单位</th>
+										<th>监控类型</th>
+										<th>连续在线监测名称</th>
+										<th>操作</th>
+									</tr>
+								</thead>
+								<tbody>
+									<tr>
+										<td>二氧化硫</td>
+										<td><input type="text" class="form-control" value="200.0"></td>
+										<td>
+											<div class="form-group dropdown drop-select justified narrower">
+												<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+												    自动、手动
+												    <span class="caret"></span>
+												</button>
+												<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+												  	<li><a href="javascript:void(0)">自动</a></li>
+												  	<li><a href="javascript:void(0)">手动</a></li>
+												  	<li><a href="javascript:void(0)">自动、手动</a></li>
+												</ul>
+								  			</div>
+										</td>
+										<td>
+											<div class="form-group dropdown drop-select justified narrower">
+												<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+												    mg/m3
+												    <span class="caret"></span>
+												</button>
+												<ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+												  	<li><a href="javascript:void(0)">mg/m3</a></li>
+												</ul>
+								  			</div>
+										</td>
+										<td><input type="text" class="form-control" value="氮氧化物"></td>
+										<td><button type="submit"><i class="icon icon-del icon-red"></i></button></td>
+									</tr>
+								</tbody>
+							</table>
+						</div>
+				    </div>
+			      	<div class="modal-footer">
+			        	<button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+			        	<button type="button" class="btn btn-primary">提交</button>
+					</div>
+				</div>
+			</div>
+		</div><!-- /.modal -->
+		
 	</div><!-- /.content -->
 	<div class="clearfix footer" id="footer">
 		<div class="pull-left"><a href="contact.html">联系我们</a></div>
