--- a/sht/table-side.html
+++ b/sht/table-side.html
@@ -197,9 +197,10 @@
 									<div class="list-title"><i class="icon icon-folder icon-sm"></i>许可证技术规范及管理办法许可证技术规范及管理办法</div>
 								</li>
 							</ul>
-						</div>
+						</div><!-- /.col-lg-3 -->
 						<div class="col-lg-9">
-							<table class="table table-striped table-hover">
+							<div class="table-responsive">
+								<table class="table table-striped table-hover">
 								<thead>
 									<tr>
 										<th>
@@ -273,6 +274,7 @@
 									</tr>
 								</tbody>
 							</table>
+							</div><!-- /.table-responsive -->
 							<div class="pages-bar">
 								<ul class="pull-right pagination">
 								    <li>
@@ -304,8 +306,8 @@
 								<div class="page-stats">
 									显示第<em>1</em>到第<em>10</em>条记录，总共<em>24</em>条记录，每页显示<span class="btn-group"><button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"><span class="page-size">10</span> <span class="caret"></span></button><ul class="dropdown-menu" role="menu"><li class="active"><a href="javascript:void(0)">10</a></li><li><a href="javascript:void(0)">25</a></li></ul></span>条记录
 								</div>											
-							</div>
-						</div>
+							</div><!-- /.pages-bar -->
+						</div><!-- /.col-lg-9 -->
 					</div><!-- /.row -->				
 				</div><!-- /.panel-body -->
 			</div><!-- /.panel -->
