--- a/sht/table-form.html
+++ b/sht/table-form.html
@@ -410,7 +410,7 @@
 					</div>
 		    	</div>
 			</div>
-		</div>
+		</div><!-- /.modal -->
 		
 		<!-- 配置限值 -->
 		<div class="modal fade" id="myModal" tabindex="-1" role="dialog">
