--- a/sht/components.html
+++ b/sht/components.html
@@ -22,6 +22,8 @@
 </head>
 <body class="components">
 	<div class="container-fluid">
+		<a href="index.html">返回首页</a>
+		<h1>UI组件-数汇通-企业排污许可管理平台</h1>
 		<h2>色彩</h2>
 		<div class="colors">
 			<span class="dark">#244466</span>
