禁止响应式

--- a/sht/table-side.html
+++ b/sht/table-side.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
@@ -13,7 +12,7 @@
 	<link href="https://cdn.bootcss.com/bootstrap-submenu/1.2.7/css/bootstrap-submenu.min.css" rel="stylesheet">
 	<link href="assets/icons.css" rel="stylesheet">
 	<link href="assets/css/animate.min.css" rel="stylesheet">
-	<link href="assets/style.css" rel="stylesheet">
+	<link href="assets/style.css" rel="stylesheet">	
 	
 	<!--[if lt IE 9]>
     <script src="assets/js/html5shiv.min.js"></script>
@@ -183,6 +182,12 @@
 								<li class="list-group-item">
 							    	<button type="button" class="btn btn-green btn-sm pull-right"><i class="icon icon-add"></i>新建目录</button>
 									<div class="list-title"><i class="icon icon-folder icon-sm"></i>所有文件</div>
+								</li>
+								<li class="list-group-item">
+									<div class="list-title"><i class="icon icon-folder icon-sm"></i>
+										<input type="text" class="form-control-sm">
+										<button type="button" class="btn btn-green btn-sm">确定</button>
+									</div>
 								</li>
 								<li class="list-group-item">
 							    	<button type="button" class="pull-right"><i class="icon icon-del icon-sm"></i></button>
