--- a/sht/components.html
+++ b/sht/components.html
@@ -3,7 +3,6 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="favicon.ico">
@@ -51,11 +50,11 @@
 		</div>
 		<div class="form-group">
 			<input type="text" class="form-control" value="1号排放口">
-			<small class="text">提示文字</small>
+			<small class="text-note">提示文字</small>
 		</div>
 		<div class="form-group">
 			<input type="text" class="form-control form-error" value="1号排放口">
-			<small class="text text-error">错误提示文字</small>
+			<small class="text-note text-error">错误提示文字</small>
 		</div>
 		<div class="form-group">
 			<button type="button" class="btn btn-default">取消</button>
