--- a/sht/components.html
+++ b/sht/components.html
@@ -10,6 +10,7 @@
 
 	<link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://cdn.bootcss.com/bootstrap-submenu/1.2.7/css/bootstrap-submenu.min.css" rel="stylesheet">
+	<link href="assets/css/nice-select.css" rel="stylesheet">
 	<link href="assets/icons.css" rel="stylesheet">
 	<link href="assets/css/animate.min.css" rel="stylesheet">
 	<link href="assets/style.css" rel="stylesheet">
@@ -79,6 +80,27 @@
 				<input type="radio" name="iradio">
 				<label>废水</label>
 			</span>
+		</div>
+		<div class="form-group nice-select-group clearfix">
+			<label>选择工厂：</label>
+			<select>
+				<option>donggongzhongchang</option>
+				<option>jiaohuachang</option>
+				<option>liantiechang</option>
+				<option>liangangchang</option>
+			</select>
+		</div>
+		<div class="form-inline">
+			<div class="form-group dropdown drop-select justified wider">
+				<button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+				    排放口许可编号-排放口企业编号
+				    <span class="caret"></span>
+				</button>
+				<ul class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenu2">
+				  	<li class="with-input"><input type="text" class="form-control" placeholder="查找"></li>
+				  	<li><a href="javascript:void(0)">DA017-FQ-BBCDLB03</a></li>
+				</ul>
+			</div>
 		</div>
 		
 		<h2>按钮</h2>
@@ -254,6 +276,7 @@
 	<script src="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/js/bootstrap.min.js"></script>
 	<script src="https://cdn.bootcss.com/bootstrap-submenu/1.2.7/js/bootstrap-submenu.min.js"></script>
 	<script src="assets/js/jquery.bootstrap-dropdown-hover.js"></script>
+	<script src="assets/js/jquery.nice-select.min.js"></script>
 	<script src="assets/js/common.js"></script>
 </body>
 </html>
